--- a/210613.md
+++ b/210613.md
@@ -7,7 +7,7 @@
 
 
 
-![image-20210613124742622](C:\Users\astro\AppData\Roaming\Typora\typora-user-images\image-20210613124742622.png)
+![image-20210613124742622](images\image-20210613124742622.png)
 
 - Open source나 public repo같은 곳에서 받은 코드 중 자동으로 실행하는 코드를 막기 위해 restricted mode로 folder를 browse할 수 있음
 - [tasks](#Tasks), debugging, workspace settings and extensions 같은 기능에 제한과 코드실행을 불가로 만듦
