Update image file path

--- a/210616.md
+++ b/210616.md
@@ -1,6 +1,6 @@
 # Git issue
 
-![image-20210616114113216](.\images\image-20210616114113216.png)
+![image-20210616114113216](images/image-20210616114113216.png)
 
 - Git bash로 비밀번호를 오입력해서 basic authentication으로 로그인했더니 위와 같은 메일이 왔다. 21.08.13 이후부터는 command line or API에서 계정 password를 이용하지 않고, token-based authentication을 할 예정이다. (생각해보니 며칠 전에 새로 받은 토큰이 있다)
 
@@ -9,7 +9,7 @@
 
 
 
-![image-20210616120635477](images\image-20210616120635477.png)
+![image-20210616120635477](images/image-20210616120635477.png)
 
 - 토큰 생성시 어떤 기능을 할지 선택할 수 있는데, 현재 내 노트북 설정은 `repo`,  `work flow` 와 `gist` 만이 체크되어있다.
 - gist(요점) : github가 운영하는 페이스트빈 서비스. 짧은코드, 메모 등을 기록 또는 공유 목적으로 사용할 수 있음
