--- a/210617.md
+++ b/210617.md
@@ -16,7 +16,7 @@ $ git update-git-for-windosw # update git for window os
 
 > Windows와 unix 계열은 개행 방식이 다르다. 그래서 CRLF, LF에 따라서 git에 push 시 해당 경고를 본 적이 있다. 또, 운영 체제에 따라 문서를 어떻게 치환할지는 중요한 문제이다. 어떻게 다른지에 대해 알아보자.
 
-![image-20210617150822713](C:\Users\astro\AppData\Roaming\Typora\typora-user-images\image-20210617150822713.png)
+![image-20210617150822713](images/image-20210617150822713.png)
 
 - 노트북 배터리에도 나오는 개행문자.
 
